[tool.poetry]
name = "antbot-1"
version = "0.1.0"
description = ""
authors = ["thedeshpande <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^3.8.2"
replit = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
